@@ -55,6 +55,9 @@ Client library:
   connection results.
 - Add mosquitto_will_clear() and change mosquitto_will_set() to only set the
   will.
+- Add mosquitto_sub_topic_tokenise() and mosquitto_sub_topic_tokens_free()
+  utility functions to tokenise a subscription/topic string into a string
+  array.
 - Replaced mosquitto_log_init() with mosquitto_log_callback_set() to allow
   clients to decide what to do with log messages.
 - Client will now disconnect itself from the broker if it doesn't receive a
